Refactoring to convert literals into constants.